# accelerometry-har

./: .gitignore  CMakeLists.txt
src/: configs.hpp  i2c_hal.cpp  i2c_hal.h  i2c_hal.hpp  i2c_selftest.cpp  joystick_fsm.hpp  logger.cpp  logger.hpp  lsm9ds1.cpp  lsm9ds1.hpp  main.cpp  plotData.py  ringBuffer.hpp  trainSVM.py  trainSVM_person.py  types.hpp  utils.hpp  window_configs.hpp
